# Trimly

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: fed19bab2ecb_create_urls_and_clicks_tables.py
app/: main.py
app/api/routes/: __init__.py
app/core/: redis.py
app/db/: session.py
app/models/: __init__.py
app/schemas/: __init__.py
